Fixed Java 8 compatibility issue